--- a/ProyectoSeremi/package.json
+++ b/ProyectoSeremi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyectoBasico",
+  "name": "ProyectoSeremi",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
